--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;600;900&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
-
 /* BODY */
 * {
   text-decoration: none;
@@ -9,10 +7,19 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #2c3e50;
 }
 body {
   font-family: "Montserrat";
+  color: #2c3e50;
+}
+hr {
+  border-bottom: 0;
+  border-width: 5px;
+  border-color: #2c3e50;
+  border-radius: 10px;
+  width: 420px;
+  margin: auto;
+  margin-bottom: 10px;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -68,16 +75,21 @@ nav {
   margin: 0 30px 0 0;
   line-height: 80px;
   font-size: 17px;
-  color: #2c3e50;
 }
 li a {
+  color: #2c3e50;
+}
+a[href="#"] {
   color: #2c3e50;
 }
 a:hover {
   color: #2eb086;
 }
 .fa-guitar:hover {
-  color: #2eb086;
+  color: #2eb086 !important;
+}
+.fa-brands:hover {
+  color: #2eb086 !important;
 }
 .checkbtn {
   font-size: 50px;
@@ -94,17 +106,14 @@ a:hover {
 .fa-guitar {
   align-items: center;
   padding: 16px 0 0 0;
-  color: #2c3e50;
 }
 /* INTRO*/
 
 .profile .name {
   text-transform: none;
   font-size: 50px;
-  font-weight: 200;
-  text-decoration: underline;
-  text-underline-offset: 30px;
-  margin-bottom: 50px;
+  font-weight: 600;
+  margin-bottom: 20px;
 }
 
 #intro {
@@ -114,7 +123,7 @@ a:hover {
 .profile-pic {
   height: 280px;
   border-radius: 50%;
-  background-color: #2c3e50;
+  background-color: #2eb086;
 }
 .profile-pic-container {
   text-align: center;
@@ -130,7 +139,7 @@ a:hover {
 
 #portfolio {
   background-color: #fff;
-  color: #2c3e50;
+  color: #2eb086;
   text-align: center;
   padding-bottom: 30px;
 }
@@ -146,7 +155,7 @@ a:hover {
 /* SKILLS */
 
 #skills {
-  background-color: #2c3e50;
+  background-color: #2eb086;
   color: #fff;
   text-align: center;
   padding-bottom: 20px;
@@ -167,14 +176,14 @@ a:hover {
 
 #contact {
   font-size: 20px;
-  background-color: #2c3e50;
+  background-color: #2eb086;
   text-align: center;
 }
 #contact .name {
   color: #fff;
 }
 .contact-details {
-  background-color: #2c3e50;
+  background-color: #2eb086;
   border: none;
   border-bottom: 2px solid white;
 }
@@ -202,15 +211,15 @@ input {
   border-color: rgb(223, 236, 230);
 }
 input::placeholder {
-  font-size: 25px;
-  color: rgb(135, 142, 149);
+  font-size: 20px;
+  color: #c2c2c2;
   font-weight: lighter;
 }
 button {
   border-radius: 5px;
   padding: 10px;
   font-size: 24px;
-  color: #2c3e50;
+  color: #2eb086;
   border-color: #fff;
   cursor: pointer;
 }
@@ -257,7 +266,7 @@ svg {
     top: 80px;
     left: 0px;
     text-align: center;
-    background-color: #2c3e50;
+    background-color: #2eb086;
     transition: all 0.4s;
     left: -100%;
   }
@@ -294,5 +303,11 @@ svg {
   }
   #intro {
     padding-bottom: 35px;
+  }
+}
+@media (max-width: 580px) {
+  hr {
+    width: 250px;
+    margin-bottom: 20px;
   }
 }
