--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ input[type="number"] {
 
 nav {
   position: fixed;
+  z-index: 1;
   height: 80px;
   width: 100%;
   background-color: #fff;
@@ -139,7 +140,7 @@ a:hover {
 
 #portfolio {
   background-color: #fff;
-  color: #2eb086;
+  color: #2c3e50;
   text-align: center;
   padding-bottom: 30px;
 }
@@ -151,6 +152,11 @@ a:hover {
   margin-left: 40px;
   margin-right: 40px;
   margin-bottom: 50px;
+}
+.images img:hover {
+  transform: scale(1.02);
+  z-index: 0;
+  position: relative;
 }
 /* SKILLS */
 
@@ -166,6 +172,11 @@ a:hover {
 .skillimages {
   height: 120px;
   margin-bottom: 60px;
+}
+.skillimages:hover {
+  transform: scale(1.1);
+  z-index: 0;
+  position: relative;
 }
 
 #skills > .skill:not(:last-child) {
@@ -199,6 +210,7 @@ input {
   margin: 0 15%;
 }
 #contact input {
+  font-family: "Montserrat";
   width: 70%;
   margin-bottom: 50px;
   clear: both;
@@ -215,13 +227,43 @@ input::placeholder {
   color: #c2c2c2;
   font-weight: lighter;
 }
+textarea::placeholder {
+  font-size: 20px;
+  color: #c2c2c2;
+  font-weight: lighter;
+}
+#contact textarea {
+  font-family: "Montserrat";
+  width: 70%;
+  height: 28px;
+  min-height: 28px;
+  max-height: 200px;
+  margin-bottom: 30px;
+  clear: both;
+  color: white;
+  font-size: 25px;
+  border-width: 0.1px;
+  background-color: transparent;
+  resize: vertical;
+  outline: none;
+  border-color: rgb(223, 236, 230);
+  /* transform: translateY(10px); */
+}
+
 button {
   border-radius: 5px;
   padding: 10px;
   font-size: 24px;
+  background-color: #fff;
   color: #2eb086;
   border-color: #fff;
+
   cursor: pointer;
+}
+button:hover {
+  color: #fff;
+  background-color: #2c3e50;
+  border-color: #2c3e50;
 }
 
 /* FOOTER */
